--- a/package.json
+++ b/package.json
@@ -453,7 +453,7 @@
     "is-regexp": "^1.0.0",
     "is-stream": "^1.1.0",
     "is-typedarray": "^1.0.0",
-    "is-svg": "^3.0.0",
+    "is-svg": ">=4.2.2"
     "is-symbol": "^1.0.2",
     "is-windows": "^1.0.2",
     "is-utf8": "^0.2.1",
@@ -869,7 +869,7 @@
     "sprintf-js": "^1.0.3",
     "split-string": "^3.1.0",
     "sshpk": "^1.16.0",
-    "ssri": "^6.0.1",
+    "ssri": ">8.0.1",
     "stack-utils": "^1.0.2",
     "stable": "^0.1.8",
     "statuses": "^1.4.0",
